Done for the day

--- a/awesome.html
+++ b/awesome.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = logo>
+    <div class = "logo">
         <span class="header">Header Logo</span>
         <span class="header-links">
         <span>header link one</span>
         <span>header link two</span>
         <span>header link three</span>
     </span>
-        <div class = textwimage>
+        <div class = mainbar>
             <h1 class="Bold">This Website is awesome</h1>
-            <p>This website has some subtext that goes here under the main tile. 
+            <span class="imagewtext"><p>This website has some subtext that goes here under the main tile. 
                 It's a smaller font and the color is lower contrast.</p>
                 <button>Sign Up</button>
-                <img src="https://www.canva.com/
-                https://export-download.canva.com/D1Bmk/DAF4qYD1Bmk/3/0/0001-5345061003889607358.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20240101%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240101T000812Z&X-Amz-Expires=68148&X-Amz-Signature=30a604d8cf00846ffe62f4fcab599f8cd3bb7f98e935e3379dc65f711bf447b1&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27Be%2520bored.png&response-expires=Mon%2C%2001%20Jan%202024%2019%3A04%3A00%20GMT" alt="Placeholder image">  
+                <img src="batmansafari.jpg" class="batmansafari" alt="Placeholder image">  
+            </span>
         </div>
     </div>
     <!-- <div class="random">
